V4: Array.push() on QStringList should invoke putIndexed()

Wrapped sequence types should cause putIndexed() method to be called
when Array.push() is used.
Fix suggested by Simon Hausmann.

[ChangeLog][QtQml] Fix JavaScript Array.push() not working on
QStringList properties.

Task-number: QTBUG-36491
Change-Id: Id04409dd7466a943d8ea8d57cd0514e8de732480
Reviewed-by: Simon Hausmann <simon.hausmann@digia.com>